fixed positioning gap between header and content

--- a/client/src/views/Event/components/EventContent/EventContent.css
+++ b/client/src/views/Event/components/EventContent/EventContent.css
@@ -1,6 +1,6 @@
 .event-content {
     position: absolute;
-    top: 400px;
+    top: 395px;
     width: 100%;
     display: flex;
     flex-direction: column;
