--- a/client/src/views/Event/components/Header/Header.css
+++ b/client/src/views/Event/components/Header/Header.css
@@ -37,38 +37,3 @@
     width: 100%;
     max-width: 900px;
 }
-
-.info-panel{
-    width: 100%;
-    background: rgba(0,0,0,0.5);
-    position: absolute;
-    min-height: 40px;
-    bottom: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
-.info-panel-content{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    max-width: 900px;
-}
-
-.info-panel-content-field{
-    display: flex;
-    z-index: 1;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 20px 0px 20px;
-    color: rgba(255,255,255, 0.9);
-    font-size: 15px;
-}
-
-.info-panel-content-field p{
-    padding: 5px 0px 5px 5px;
-    margin: 0px;
-}
